# ConfInLog-Src

./: CMakeLists.txt  ConfInLog.cpp  ConfInLog.h  ConfInfo.cpp  ConfInfo.h  LogInfo.cpp  LogInfo.h  README.md  WordNinja.cpp  WordNinja.h
scripts/: confinlog.py  extract_json.py  nlp_match.py
